Add example report.